<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:orientation="vertical" >
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#80202f58"
                android:orientation="horizontal">
                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/lbBoxMacText" />
                <EditText android:id="@+id/etBoxMac"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="#FFFFFF"
                    android:hint="@string/etBoxMacHint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#80202f58"
                android:orientation="horizontal">
                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/lbLocateMac1Text" />
                <EditText android:id="@+id/etLocateMac1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="#FFFFFF"
                    android:hint="@string/etLocateMac1Hint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#80202f58"
                android:orientation="horizontal">
                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/lbLocateMac2Text" />
                <EditText android:id="@+id/etLocateMac2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="#FFFFFF"
                    android:hint="@string/etLocateMac2Hint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#80202f58"
                android:orientation="horizontal">
                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/lbLocateMac3Text" />
                <EditText android:id="@+id/etLocateMac3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="#FFFFFF"
                    android:hint="@string/etLocateMac3Hint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#80202f58"
                android:orientation="horizontal">
                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/lbSendIntervalText" />
                <EditText android:id="@+id/etSendInterval"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="number"
                    android:textColor="#FFFFFF"
                    android:hint="@string/etSendIntervalHint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#80202f58"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <Button android:id="@+id/btnConn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanText" />
                <Button android:id="@+id/btnSaveLocal"
                    android:layout_marginLeft="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/okText" />
                <Button
                    android:id="@+id/btnQueryLocal"
                    android:layout_marginLeft="25dp"
                    android:text="@string/btnQueryLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ListView android:id="@+id/lvDevListParam"
        android:background="#80202f58"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
